[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
chrono = "0.4"
dotenv = "0.15"
nom = "7.1"
reqwest = "0.11"
tokio = { version = "1.14", features = ["rt-multi-thread", "macros"] }
